Determine call direction in backend
