# api/src/main/resources/swagger.yaml
@@ -78,6 +78,9 @@ definitions:
       disposition:
         type: string
         description: Call disposition
+      direction:
+        type: string
+        description: Call direction (outgoing or incoming)
     xml:
       name: Call
     example:
@@ -87,3 +90,4 @@ definitions:
       duration: 352
       dcontext: public-out
       disposition: ANSWERED
+      direction: OUTGOING
